MSEARCH-785: refactor tests